--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,18 @@ a:hover{
 html, body{
 	width: 100%;
 	height: 100%;
-	background: rgba(66,66,66,1);
+	font-family: Roboto, arial;
+	color: white;
 	background: rgba(66,66,66,1);
 	background: -moz-linear-gradient(top, rgba(66,66,66,1) 0%, rgba(41,41,41,1) 47%, rgba(23,18,23,1) 100%);
 	background: -webkit-linear-gradient(top, rgba(66,66,66,1) 0%, rgba(41,41,41,1) 47%, rgba(23,18,23,1) 100%);
 	background: linear-gradient(to bottom, rgba(66,66,66,1) 0%, rgba(41,41,41,1) 47%, rgba(23,18,23,1) 100%);
-	font-family: Roboto, arial;
-	color: white;
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#424242', endColorstr='#171217', GradientType=0 );
+}
+
+main{
+	width: 100%;
+	height: 100%;
 }
 
 article{
@@ -80,7 +84,7 @@ article{
 }
 
 #picture{
-	width: 40%;
+	width: 28%;
 	height: 40%;
 }
 
@@ -127,8 +131,8 @@ article{
 	line-height: 60px;
 	font-size: 20px;
 	border: 1.5px dashed white;
-	top: 20%;
-	left: 30%;
+	top: 29%;
+	left: 5%;
 	border-radius: 100px;
 	background-color: #36589e;
 	animation: float 3s ease-in-out infinite;
@@ -137,14 +141,14 @@ article{
 
 .bubble.red{
 	background-color: #aa3796;
-	top: 35%;
-	left: 70%;
+	top: 29%;
+	left: 78%;
 }
 
 .bubble.green{
 	background-color: #369246;
 	top: 75%;
-	left: 50%;
+	left: 42%;
 }
 
 .bubble:hover{
@@ -184,8 +188,8 @@ hr{
 .animated-border{
 	position: absolute;
 	border-width: 2px;
-	border-style: none solid none solid;
-	border-color: rgba(255,114,0,0.5);
+	border-style: dotted solid dotted solid;
+	border-color: rgba(255,255,255,0.5);
 	padding: 70px;
 	border-radius: 1000px;
 	animation: rotate 10s linear infinite;
@@ -216,16 +220,51 @@ i:hover{
     }
 
     #about{
-    	top: 18%;
-    	left: 30%;
+    	top: 25%;
+    	left: 20%;
     }
 
     #projects{
-    	top: 33%;
+    	top: 25%;
     	left: 55%;
     }
+
+    .bubble{
+    	left:20%;
+    }
+
+	.bubble.red{
+		background-color: #aa3796;
+		left: 75%;
+	}
+
+	.bubble.green{
+		background-color: #369246;
+		top: 75%;
+		left: 48%;
+	}
+	#picture{
+		width: 40%;
+	}
 }
 
+@media screen and (min-width: 1200px){
+    .bubble{
+    	left:35%;
+    }
+
+	.bubble.red{
+		background-color: #aa3796;
+		top: 29%;
+		left: 65%;
+	}
+
+	.bubble.green{
+		background-color: #369246;
+		top: 75%;
+		left: 48.5%;
+	}
+}
 @media screen and (min-width: 600px) and (max-width: 1000px) {
     article{
     	max-width: 300px;
@@ -241,6 +280,26 @@ i:hover{
     	top: 33%;
     	left: 40%;
     }
+
+    .bubble{
+    	top:;
+    	left:10%;
+    }
+
+	.bubble.red{
+		background-color: #aa3796;
+		top: 29%;
+		left: 78%;
+	}
+
+	.bubble.green{
+		background-color: #369246;
+		top: 75%;
+		left: 46%;
+	}
+	#picture{
+		width: 30%;
+	}
 }
 
 @media screen and (min-width: 520px) and (max-width: 600px) {
