--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ a:hover{
 html, body{
 	width: 100%;
 	height: 100%;
-	font-family: Roboto, arial;
+	font-family: 'Roboto', sans-serif;
 	color: white;
 	background: rgba(66,66,66,1);
 	background: -moz-linear-gradient(top, rgba(66,66,66,1) 0%, rgba(41,41,41,1) 47%, rgba(23,18,23,1) 100%);
@@ -23,13 +23,8 @@ html, body{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#424242', endColorstr='#171217', GradientType=0 );
 }
 
-main{
-	width: 100%;
-	height: 100%;
-}
-
 article{
-	visibility: hidden;
+	display: none;
 	position: absolute;
 	height: 50%;
 	width: 80%;
@@ -37,8 +32,21 @@ article{
 	top: 15%;
 	left: 0%;
 	border: 1px dashed white;
-	opacity: 0;
-	transition: opacity 0.5s ease-in-out;
+}
+
+hr{
+	width: 100%;
+	height: 0;
+	margin-bottom: 10px;
+}
+
+i{
+	min-height: 40px;
+	min-width: 40px;
+}
+
+i:hover{
+	cursor: pointer;
 }
 
 #about{
@@ -57,43 +65,14 @@ article{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c700dd', endColorstr='#9f00bf',GradientType=0 ); /* IE6-9 */
 }
 
-.project{
-	display: flex;
-	justify-content: space-between;
-	height: 10%;
-	width: 100%;
-	padding: 5px;
-	margin-top: 5px;
-	background: -moz-linear-gradient(left, rgba(115,32,119,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, rgba(115,32,119,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, rgba(115,32,119,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6732077', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
-}
-
 #project-cells{
 	height: 80%;
 	width: 100%;
 }
 
-.container{
-	height: 100%;
-	width: 100%;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-}
-
 #picture{
 	width: 28%;
 	height: 40%;
-}
-
-.sectionTitle{
-	width: 100%;
-	height: 10%;
-	line-height: 30px;
-	text-align: center;
-	font-size: 20px;
 }
 
 #content{
@@ -112,6 +91,35 @@ article{
 	color: white;
 	justify-content: space-around;
 	align-items: center;
+}
+
+.container{
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
+
+.sectionTitle{
+	width: 100%;
+	height: 10%;
+	line-height: 30px;
+	text-align: center;
+	font-size: 20px;
+}
+
+.project{
+	display: flex;
+	justify-content: space-between;
+	height: 10%;
+	width: 100%;
+	padding: 5px;
+	margin-top: 5px;
+	background: -moz-linear-gradient(left, rgba(115,32,119,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left, rgba(115,32,119,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right, rgba(115,32,119,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6732077', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
 }
 
 .round{
@@ -169,11 +177,6 @@ article{
 		box-shadow: 0 5px 5px 0px rgba(0,0,0,0.1);
 	}
 }
-hr{
-	width: 100%;
-	height: 0;
-	margin-bottom: 10px;
-}
 
 .title{
 	display: flex;
@@ -202,15 +205,6 @@ hr{
 	100%{
 		transform: rotate(360deg);
 	}
-}
-
-i{
-	min-height: 40px;
-	min-width: 40px;
-}
-
-i:hover{
-	cursor: pointer;
 }
 
 @media screen and (min-width: 1000px){
